# stock_trading_ml_modelling

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  config.py  copy_db.py  create_prices_table_sql.py  evaluating_signals.ipynb  feature_eng.py  feature_engineering_feature_list.txt  fixing_macd.py  functions.py  historic_prices_remove_ticker.ipynb  lgbm_model_training.ipynb  lgbm_run.py  lgbm_run_model.ipynb  lgbm_training.py  log_reg_model_ledger_analysis.ipynb  log_reg_model_run.ipynb  log_reg_model_run_SCRIPT_ONLY.ipynb  log_reg_model_training.ipynb  log_reg_model_training_v2.ipynb  nn_feature_eng.py  price_feature_engineering_v5.ipynb  price_feature_engineering_v6.ipynb  prices_sqlite.db  pyproject.toml  random_forest_model_ledger_analysis.ipynb  random_forest_model_training_v3.ipynb  random_forest_run_model.ipynb  requirements.txt  run.ps1  run_fund.py  run_funds.ipynb  stock_filtering.py  summary_20190731.xlsx  web_scrape.py  web_scrape_sql.py  (+1 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  evaluating_signals-checkpoint.ipynb  lgbm_model_training-checkpoint.ipynb  lgbm_model_training_v2-checkpoint.ipynb  lgbm_model_training_v3-checkpoint.ipynb  lgbm_run_model-checkpoint.ipynb  log_reg_model_training_v2-checkpoint.ipynb  plotting_features-checkpoint.ipynb  price_feature_engineering_v6-checkpoint.ipynb  price_feature_engineering_v7-checkpoint.ipynb  run_funds-checkpoint.ipynb  web_scrapping_prices_daily_v2-checkpoint.ipynb
functions/: ft_eng_funcs.py  sql_funcs.py  web_scrape_funcs.py
(+86 files in other folders)
