[tool.poetry]
name = "stock-trading-ml-modelling"
version = "0.1.0"
description = ""
authors = ["Robert Franklin <cia05rf@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_trading_ml_modelling"}]

[tool.poetry.dependencies]
python = "3.11.1"
scipy = "^1.10.1"
beautifulsoup4 = "^4.12.2"
joblib = "^1.2.0"
lightgbm = "^3.3.5"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
numexpr = "^2.8.4"
pandas = "^2.0.0"
Pillow = "^9.5.0"
tqdm = "^4.65.0"
pyaml = "^21.10.1"
requests = "^2.31.0"
SQLAlchemy = "^2.0.9"
tables = "^3.8.0"
urllib3 = "^1.26.15"
npy-append-array = "^0.9.16"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
